// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexIconLink Check styling ability of IconLink 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: white;
  width: 20px;
  height: 20px;
}

<a
  class="testname emotion-0 emotion-1"
  href="https://google.de"
  rel="noreferrer"
  style="transform: none;"
  target="_blank"
/>
`;

exports[`IndexIconLink Create IndexIconLink with {"background": "white", "external": true, "href": "https://google.de", "size": "20px"} 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: white;
  width: 20px;
  height: 20px;
}

<a
  class="emotion-0 emotion-1"
  href="https://google.de"
  rel="noreferrer"
  style="transform: none;"
  target="_blank"
/>
`;

exports[`IndexIconLink Create IndexIconLink with {"background": "white", "href": "/test", "size": "20px"} 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: white;
  width: 20px;
  height: 20px;
}

<a
  class="emotion-0 emotion-1"
/>
`;
